# the-watcher

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  rustfmt.toml  schema.surrealql
src/: api.rs  auth.rs  config.rs  database.rs  error.rs  lib.rs  logger.rs  logging.rs  macros.rs  main.rs  model.rs  time.rs  tracker.rs  youtube.rs
src/api/: error.rs  mod.rs  state.rs
src/database/: macros.rs  mod.rs  query.rs  record.rs
src/model/: entity.rs  log.rs  mod.rs  stats.rs  timestamp.rs  tracker.rs  video_id.rs
src/repl/: mod.rs  parse.rs
src/service/: database.rs  mod.rs  tracker_manager.rs  youtube.rs
src/service/database/: error.rs  mod.rs
src/service/timing_map/: mod.rs
src/service/tracker/: mod.rs
src/service/tracker_manager/: mod.rs
src/service/watcher/: macros.rs  mod.rs
src/service/youtube/: error.rs  mod.rs  video_id.rs
src/tracker/: mod.rs  recorder.rs  task.rs  watcher.rs
