[package]
name = "the-watcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
axum = "0.7.4"
axum_session = "0.12.1"
axum_session_auth = "0.12.0"
axum-auth = "0.7.0"
axum-extra = { version = "0.9.2", features = ["cookie", "form", "query"] }
axum-test = "14.2.2"
cached = "0.48"
chrono = "0.4"
config = "0.13"
derive_builder = "0.13"
derive_more = "0.99.17"
derive-new = "0.6.0"
envy = "0.4.2"
futures = "0.3.30"
holodex = "0.3.3"
invidious = { version = "0.7.4", features = ["reqwest_async"] }
itertools = "0.12.0"
num = "0.4.1"
predicates = "3.0.4"
rangemap = "1.4.0"
regex = "1.10.2"
reqwest = "0.11.23"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
snafu = "0.8.0"
strung = "0.1.4"
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tracing-serde = "0.1.3"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
uuid = "1.6"
dotenvy = "0.15.7"
derivative = "2.2.0"
functor_derive = "0.4.2"
ractor = "0.9.3"
surrealdb = "1.1.1"
dashmap = "5.5.3"
rustyline = "13.0.0"
ratatui = "0.25.0"
crossterm = "0.27.0"
nom = "7.1.3"
chumsky = "0.9.3"
serde_with = "3.5.1"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
