[package]
name = "the-watcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["cookie", "form", "query"] }
axum-test = "14"
chrono = "0.4"
derive_more = "0.99"
derive-new = "0.6"
envy = "0.4"
futures = "0.3"
holodex = "0.3"
invidious = { version = "0.7", features = ["reqwest_async"] }
serde = { version = "1", features = ["derive"] }
snafu = "0.8"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-serde = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
dotenvy = "0.15"
surrealdb = "1.1"
dashmap = "5"
url = { version = "2.5", features = ["serde"] }
jsonwebtoken = "9.2"
secrecy = { version = "0.8", features = ["serde"] }
iso8601-duration = { version = "0.2", features = ["serde", "chrono"] }
tower-http = { version = "0.5.1", features = ["cors"] }
http = "1.0.0"
axum-template = { version = "2.1.0", features = ["tera"] }
tera = "1.19.1"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
