[package]
name = "kitsune"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", features = ["macros", "form"] }
axum-extra = { version = "0.9", features = ["cookie", "form", "query"] }
axum-template = { version = "2", features = ["tera"] }
axum-test = "14"
chrono = "0.4"
dashmap = "5"
derive-new = "0.6"
dotenvy = "0.15"
envy = "0.4"
futures = "0.3"
holodex = "0.3"
humantime = "2"
invidious = { version = "0.7", features = ["reqwest_async"] }
notify = "6.1.1"
once_cell = "1.19.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.114"
serde_with = "3.6.1"
snafu = "0.8"
surrealdb = { version = "1", features = ["kv-mem", "http"] }
tera = "1"
time = "0.3"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
tower-livereload = "0.9"
tracing = "0.1"
tracing-appender = "0.2"
tracing-serde = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
url = { version = "2", features = ["serde"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

# faster compile
[profile.dev]
opt-level = 0
lto = false
incremental = true
debug = "limited"

[profile.dev.build-override]
opt-level = 3
